--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,9 +2,11 @@ eclipse.preferences.version=1
 encoding//src/com/uestc/newspaper/www/BJWB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/CDSB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/CDWB.java=UTF-8
+encoding//src/com/uestc/newspaper/www/GZRB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/JFJB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/WCC.java=UTF-8
 encoding//src/com/uestc/newspaper/www/XMWB.java=UTF-8
+encoding//src/com/uestc/newspaper/www/XWCB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/YNET.java=UTF-8
 encoding//src/com/uestc/spider/www/CDSB.java=UTF-8
 encoding//src/com/uestc/spider/www/JustForToday.java=UTF-8
