南方都市报 添加

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/com/uestc/newspaper/www/CDSB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/CDWB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/GZRB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/JFJB.java=UTF-8
+encoding//src/com/uestc/newspaper/www/NANDU.java=UTF-8
 encoding//src/com/uestc/newspaper/www/WCC.java=UTF-8
 encoding//src/com/uestc/newspaper/www/XMWB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/XWCB.java=UTF-8
