--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/com/uestc/local/www/CDQSS.java=UTF-8
 encoding//src/com/uestc/newspaper/www/BJWB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/CDSB.java=UTF-8
 encoding//src/com/uestc/newspaper/www/CDWB.java=UTF-8
