--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,3 +13,5 @@ encoding//src/com/uestc/newspaper/www/YNET.java=UTF-8
 encoding//src/com/uestc/spider/www/CDSB.java=UTF-8
 encoding//src/com/uestc/spider/www/JustForToday.java=UTF-8
 encoding//src/com/uestc/spider/www/ThreadPoolHandleNews.java=UTF-8
+encoding//src/com/uestc/zaobao/www/ZAOBAOGuoJi.java=UTF-8
+encoding//src/com/uestc/zaobao/www/ZAOBAOGuoNei.java=UTF-8
