--- a/.classpath
+++ b/.classpath
@@ -2,67 +2,69 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/commons-lang3-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/cssparser-0.9.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/htmlunit-2.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/htmlunit-core-js-2.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/httpclient-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/httpcore-4.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/httpmime-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/jetty-http-8.1.14.v20131031.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/jetty-io-8.1.14.v20131031.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/jetty-util-8.1.14.v20131031.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/jetty-websocket-8.1.14.v20131031.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/nekohtml-1.9.20.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/htmllexer.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/htmlparser.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/mongo-2.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/apache-mime4j-0.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/bsh-1.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-exec-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-io-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-jxpath-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-lang3-3.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/cssparser-0.9.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/gson-2.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/guava-18.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/hamcrest-library-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/htmlunit-2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/htmlunit-core-js-2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/httpclient-4.3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/httpmime-4.3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/ini4j-0.5.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/jcommander-1.29.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/jetty-websocket-8.1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/jna-3.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/jna-platform-3.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/junit-dep-4.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/nekohtml-1.9.21.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/netty-3.5.7.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/operadriver-1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/phantomjsdriver-1.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/protobuf-java-2.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/sac-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/selenium-java-2.44.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/testng-6.8.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/xercesImpl-2.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xunchun/git/Spider/seleniumjar/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/cssparser-0.9.13.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-2.14.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.14.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-websocket-8.1.14.v20131031.jar"/>
+	<classpathentry kind="lib" path="lib/nekohtml-1.9.20.jar"/>
+	<classpathentry kind="lib" path="lib/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="htmllexer.jar"/>
+	<classpathentry kind="lib" path="htmlparser.jar"/>
+	<classpathentry kind="lib" path="mongo-2.10.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/bsh-1.3.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/chromedriver.exe"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-exec-1.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-jxpath-1.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/cssparser-0.9.14.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/gson-2.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/htmlunit-2.15.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/htmlunit-core-js-2.15.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/httpclient-4.3.4.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/httpmime-4.3.4.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/IEDriverServer.exe"/>
+	<classpathentry kind="lib" path="seleniumjar/ini4j-0.5.2.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/jcommander-1.29.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/jetty-websocket-8.1.8.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/jna-3.4.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/jna-platform-3.4.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/junit-dep-4.11.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/nekohtml-1.9.21.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/netty-3.5.7.Final.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/operadriver-1.5.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/phantomjsdriver-1.1.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/protobuf-java-2.4.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/sac-1.3.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/selenium-java-2.44.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/testng-6.8.5.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="seleniumjar/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
